# space_tycoon_terminal

./: .gitignore  .gitmodules  LICENSE  Main.cpp  meson.build  readme  uncrustify.cfg  vs2017cmd.bat  vs2017ninja.bat  vs_latest_ninja.bat  vscode.code-workspace
src/: Game.cpp  Game.h  Main.cpp  meson.build
subprojects/: easyloggingpp.wrap
